--- a/docker-compose/base-docker-compose.yml
+++ b/docker-compose/base-docker-compose.yml
@@ -3,15 +3,13 @@ version: '3.4'
 services:
  avahi:
    container_name: avahi
-   image: solidnerd/avahi:latest
    network_mode: host
    volumes:
-     - ./avahi:/etc/avahi:ro
+     - ../avahi:/etc/avahi:ro
    restart: unless-stopped
 
  samba:
    container_name: samba
-   image: dperson/samba:latest
    environment:
      TZ: 'Europe/Warsaw'
    networks:
